...
    }
}

fun previewState(step: ManualDoseStep): ManualDoseState = ManualDoseState(
    medicineEntries = listOf(
        ManualDoseMedicineEntry("Vitamin X 500 mg", Medicine.default().copy(id = 1, useColor = true)),
        ManualDoseMedicineEntry("Medicine A", Medicine.default().copy(id = 2)),
        ManualDoseMedicineEntry("Medicine B", Medicine.default().copy(id = 3)),
    ).toImmutableList(),
    lastCustomMedicineEntry = ManualDoseMedicineEntry("Medicine C", null),
    amounts = listOf("1 tablet", "2 tablets").toImmutableList(),
    lastCustomDoseAmount = "5 ml",
    selectedMedicine = ManualDoseMedicineEntry("Vitamin X 500 mg", Medicine.default().copy(id = 1)),
...
